--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
 <body>
     <div class="calcContainer">
         <h4 class="title">Calculator</h4>
-        <h3 class="results">{results}</h3>
+        <div class="resultsContainer">
+            <h5 class="result">{results}</h5>
+            <h3 class="input">{input}</h3>
+        </div>        
             <div class="numpadVertical">
-                <div class="numpadHorizontal">
-                    <button class="numpad">7</button>
-                    <button class="numpad">8</button>
-                    <button class="numpad">9</button>
-                    <button class="operator">/</button>
+                <div class="numpadHorizontal clearContainer">
+                    <button class="numpad clear" onclick="clearOne()">clear</button>
+                    <button class="numpad clear" onclick="clearAll()">clear all</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="numpad">4</button>
-                    <button class="numpad">5</button>
-                    <button class="numpad">6</button>
-                    <button class="operator">X</button>
+                    <button class="numpad" onclick="addToResults(this)">7</button>
+                    <button class="numpad" onclick="addToResults(this)">8</button>
+                    <button class="numpad" onclick="addToResults(this)">9</button>
+                    <button class="operator" onclick="addToResults(this)">/</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="numpad">1</button>
-                    <button class="numpad">2</button>
-                    <button class="numpad">3</button>
-                    <button class="operator">-</button>
+                    <button class="numpad" onclick="addToResults(this)">4</button>
+                    <button class="numpad" onclick="addToResults(this)">5</button>
+                    <button class="numpad" onclick="addToResults(this)">6</button>
+                    <button class="operator" onclick="addToResults(this)">x</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="operator">.</button>
-                    <button class="numpad">0</button>
-                    <button class="operator">=</button>
-                    <button class="operator">+</button>
+                    <button class="numpad" onclick="addToResults(this)">1</button>
+                    <button class="numpad" onclick="addToResults(this)">2</button>
+                    <button class="numpad" onclick="addToResults(this)">3</button>
+                    <button class="operator" onclick="addToResults(this)">-</button>
                 </div>
+                <div class="numpadHorizontal">
+                    <button class="operator" onclick="addToResults(this)">.</button>
+                    <button class="numpad" onclick="addToResults(this)">0</button>
+                    <button class="operator" onclick="getResults(this)">=</button>
+                    <button class="operator" onclick="addToResults(this)">+</button>
+                </div>
+                
             </div>           
         </div>
     </div>
