--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
         </div>        
             <div class="numpadVertical">
                 <div class="numpadHorizontal clearContainer">
-                    <button class="numpad clear" onclick="clearOne()">clear</button>
+                    <button class="numpad clear" onclick="clearLast()">clear</button>
                     <button class="numpad clear" onclick="clearAll()">clear all</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="numpad" onclick="addToResults(this)">7</button>
-                    <button class="numpad" onclick="addToResults(this)">8</button>
-                    <button class="numpad" onclick="addToResults(this)">9</button>
-                    <button class="operator" onclick="addToResults(this)">/</button>
+                    <button class="numpad" onclick="addToInput(this)">7</button>
+                    <button class="numpad" onclick="addToInput(this)">8</button>
+                    <button class="numpad" onclick="addToInput(this)">9</button>
+                    <button class="operator" onclick="addToInput(this)">/</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="numpad" onclick="addToResults(this)">4</button>
-                    <button class="numpad" onclick="addToResults(this)">5</button>
-                    <button class="numpad" onclick="addToResults(this)">6</button>
-                    <button class="operator" onclick="addToResults(this)">x</button>
+                    <button class="numpad" onclick="addToInput(this)">4</button>
+                    <button class="numpad" onclick="addToInput(this)">5</button>
+                    <button class="numpad" onclick="addToInput(this)">6</button>
+                    <button class="operator" onclick="addToInput(this)">x</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="numpad" onclick="addToResults(this)">1</button>
-                    <button class="numpad" onclick="addToResults(this)">2</button>
-                    <button class="numpad" onclick="addToResults(this)">3</button>
-                    <button class="operator" onclick="addToResults(this)">-</button>
+                    <button class="numpad" onclick="addToInput(this)">1</button>
+                    <button class="numpad" onclick="addToInput(this)">2</button>
+                    <button class="numpad" onclick="addToInput(this)">3</button>
+                    <button class="operator" onclick="addToInput(this)">-</button>
                 </div>
                 <div class="numpadHorizontal">
-                    <button class="operator" onclick="addToResults(this)">.</button>
-                    <button class="numpad" onclick="addToResults(this)">0</button>
-                    <button class="operator" onclick="getResults(this)">=</button>
-                    <button class="operator" onclick="addToResults(this)">+</button>
+                    <button class="numpad operator" onclick="addToInput(this)">.</button>
+                    <button class="numpad" onclick="addToInput(this)">0</button>
+                    <button class="operator" onclick="getResults()">=</button>
+                    <button class="operator" onclick="addToInput(this)">+</button>
                 </div>
                 
             </div>           
