--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="calcContainer">
         <h4 class="title">Calculator</h4>
         <div class="resultsContainer">
-            <h5 class="result">{results}</h5>
-            <h3 class="input">{input}</h3>
+            <h5 class="result"></h5>
+            <h3 class="input"></h3>
         </div>        
             <div class="numpadVertical">
                 <div class="numpadHorizontal clearContainer">
